testsuite/tests/partial-sigs/should_fail/PartialClassMethodSignature.stderr

PartialClassMethodSignature.hs:6:15: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in a class method signature for ‘foo’
